@@ -1,7 +1,7 @@
 # Contributor: M Rawash <mrawash _stange_curved_character_ gmail D0T com>
 # Maintainer: matthiaskrgr <matthiaskrgr _strange_curverd_character_ freedroid D0T org>
 pkgname=freedroidrpg-git
-pkgver=20120405
+pkgver=20121226
 pkgrel=1
 pkgdesc="A science fiction role playing game which tells the story of a world destroyed by a conflict between robots and their human masters - development version"
 url="http://www.freedroid.org"
@@ -9,7 +9,8 @@ license=('GPL')
 arch=('i686' 'x86_64')
 #makedepends=('git' 'optipng' 'jpegoptim' 'gawk')
 makedepends=('git')
-depends=('lua'  'sdl_image' 'libgl' 'sdl_mixer' 'sdl_gfx' 'python')
+#depends=('lua' 'sdl_image' 'libgl' 'sdl_mixer' 'sdl_gfx' 'python')
+depends=('sdl_image' 'libgl' 'sdl_mixer' 'sdl_gfx' 'python')
 #optdepends=('espeak: used to generate the bot voice samples, actually not needed at build or runtime, thus commented')
 optdepends=('mesa: to run the game in opengl mode')
 conflicts=('freedroidrpg' 'freedroidrpg-svn')
@@ -20,7 +21,7 @@ source=("http://buildbot.freedroid.org/logo.png"
         "changelog")
 sha1sums=('4a9b3ffadae7367c0f30025370cb7d27ba38fcc1'
           '463708161658e15aa555de14ef18ea1fcc0a2758'
-          'c593c2e814d73eca5ee3935929934a94cb789321')
+          '16ee71e287dca8e973b6df3790628b6b12b37d8d')
 
 _gitroot="git://freedroid.git.sourceforge.net/gitroot/freedroid/freedroid"
 _gitname="freedroid"
@@ -50,7 +51,7 @@ build() {
 	msg "Running autogen.sh..."
 	./autogen.sh
 	msg "Running configure..."
-	./configure --prefix=/usr
+	./configure --prefix=/usr --with-embedded-lua
 	msg "Compiling..."
 	make
 }
