@@ -2,15 +2,15 @@
 # Maintainer: Victor Aurélio <victor.feradecs@gmail.com>
 
 pkgname=pyih-uploader
-pkgver=0.1.2
+pkgver=0.1.3
 pkgrel=1
 pkgdesc="is small python2 program to upload images to imageshack."
 arch=('any')
 url="https://github.com/hotvic/pyih-uploader/"
 license=('GPL3')
 depends=('python2' 'curl')
-source=("https://github.com/hotvic/pyih-uploader/archive/v0.1.2.tar.gz")
-md5sums=('feb05d3562fff68ce6d2be3e6405a39c')
+source=("https://github.com/hotvic/pyih-uploader/archive/v0.1.3.tar.gz")
+md5sums=('41095d80c7abb6048ace4e4a78a801f0')
 
 package() {
 	cd $srcdir/$pkgname-$pkgver/
