@@ -1,35 +1,33 @@
+# Maintainer: Sascha Weaver <wzyboies@gmail.com>
+
 pkgname=vtun
-pkgver=3.0.2
-pkgrel=6
-pkgdesc="Create virtual tunnels over TCP/IP networks with traffic shaping"
+pkgver=3.0.3
+pkgrel=1
+pkgdesc="The easiest way to create Virtual Tunnels over TCP/IP networks
+with traffic shaping, compression and encryption."
 arch=('i686' 'x86_64')
 url="http://vtun.sourceforge.net/"
 license=('GPL')
-depends=('openssl' 'zlib')
-makedepends=('bison' 'flex' 'm4')
+depends=('openssl' 'zlib' 'lzo2')
 backup=('etc/vtun/vtund.conf')
-source=(http://ftp.de.debian.org/debian/pool/main/v/vtun/vtun_3.0.2.orig.tar.gz
-        http://ftp.de.debian.org/debian/pool/main/v/vtun/vtun_3.0.2-4.diff.gz)
-md5sums=('d3d8bc4d58886498a1c338670eab9315'
-         'b05694d5f9dae9bc132e7df048bff6cd')
+source=(http://downloads.sourceforge.net/project/${pkgname}/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.gz)
+sha512sums=('5fa789d08b556f97492b89515a89c2322c4b0a8fa95bd1035f5ed19061b3654a6a36a9911792096ac872ae9ae5451848cab87d0343dc0ffc064affea1f7d0d54')
 
 build() {
-  cd "$srcdir/$pkgname-$pkgver"
+  cd "${srcdir}/${pkgname}-${pkgver}"
 
-  patch -Np1 -i "$srcdir/vtun_3.0.2-4.diff"
+  ./configure \
+    --prefix=/usr \
+    --sysconfdir=/etc/vtun \
+    --localstatedir=/var \
+    --mandir=/usr/share/man
 
-  for i in $(ls debian/patches/*.patch); do
-    patch -Np1 -i $i
-  done
-
-  ./configure --prefix=/usr --disable-lzo --sysconfdir=/etc/vtun \
-    --localstatedir=/var --mandir=/usr/share/man
   make
 }
 
 package() {
-  cd "$srcdir/$pkgname-$pkgver"
+  cd "${srcdir}/${pkgname}-${pkgver}"
 
-  make DESTDIR="$pkgdir" STAT_DIR=/var/log install
+  make DESTDIR="${pkgdir}" install
 }
 # vim: ts=2 sw=2 et ft=sh
