@@ -1,3 +1,6 @@
+Version 20121226
+ * Fix build for lua 5.2 by using the embedded lua.
+ * We don't need lua as external dependency for this.
 Version 20120405
  * Clean up dependencies
  * Make git clean -dfx work as intended
